# atm

./: .clang-complete  .clang-format  CMakeLists.txt  README.md
cache/: CMakeLists.txt
cache/include/: atmcache.h  mysqlcache.h  rows.h
cache/src/: mysqlcache.cpp
cmake/: FindMYSQLCPPCONN.cmake  common.cmake  testing.cmake
common/: CMakeLists.txt
common/include/: constants.h  diacritics.h  diacritics.hpp  fulliteminfo.h  inflections.hpp  letternode.h  letters.h  minimaliteminfo.h  multiplyparams.h  node.h  rawdata.h  resultnode.h  texthandling.hpp  textinfo.hpp  tree.h  triplet.h  types.h
common/src/: minimaliteminfo.cpp  node.cpp  resultnode.cpp  tree.cpp
core/: CMakeLists.txt
core/include/: stemmer.h  treesearch.h
core/src/: stemmer.cpp  treesearch.cpp
doc/: notes.txt
test/: CMakeLists.txt
test/cache/: CMakeLists.txt  main.cpp  mysqlcachetest.cpp
test/common/: CMakeLists.txt  diacriticstest.cpp  inflectionstest.cpp  main.cpp
test/core/: CMakeLists.txt  main.cpp  stemmertest.cpp
test/util/: CMakeLists.txt  conversionstest.cpp  diacriticstest.cpp  main.cpp  stringmanipulationtest.cpp
util/: CMakeLists.txt
util/include/: conversions.h  diacritics.hpp  enums.h  enums.hpp  letters.hpp  texthandling.hpp  util.h
util/src/: conversions.cpp  util.cpp
